2010-08-15  JMB  French translation update, main window code cleanup

    Added a recently received update to the French UI translation.  Moved a lot
    of code for the main window to a separate base class, which has already
    been tested and refined in another project of mine; fixes a minor issue
    with the save changes prompt dialog.

2010-08-14  JMB  Condition editor enum enhancement, clear recent files button

    If you switch from one column to another one of the same enum type in the
    condition editor, the selected value is no longer reset to the first one
    in the list (this was really bothering me in a transactions database where
    the "To" and "From" columns use the same enum).
    
    Added a button in the "Appearance" tab of the preferences dialog to clear
    the list of recently opened files.

2010-08-13  JMB  Calculator backspace/clear fix, better Fremantle integer input

    Fixed a bug where clicking backspace or the clear button in the calculator
    dialog could result in incorrect display of grouping separators.  Enabled
    function lock on integer entry widgets in Fremantle, so input is easier
    using the hardware keyboard (although this precludes group separators, and
    wouldn't work for decimal values either).

2010-06-08  JMB  XML import bugfix, default decimal string fix

    Fixed a bug where XML files would fail to import if the current filter
    was specified as anything other than the "all rows" filter.  Fixed the
    initial default value for decimal columns to use the appropriate decimal
    point character for the locale in use.

2010-06-03  JMB  Packaging fix for Fremantle

    Fixed a problem with the packaging for Fremantle that was causing
    installation to fail near completion (the link to the binary wasn't always
    managed properly).

2010-06-02  #################### PortaBase 2.0 ####################

2010-06-02  JMB  Fremantle condition editor fix, updated version number
